Simplify parsing of users from text file